Frontend Facepalm blog post. Fix code wrapping making the site wide.

--- a/sass/partials/_code.scss
+++ b/sass/partials/_code.scss
@@ -2,7 +2,7 @@ code {
   @extend .fg-green;
   span {
     display: block;
-    white-space: pre;
+    white-space: pre-wrap;
   }
   span.output {
     @extend .fg-blue;
